src/layout.css
/* GRID SYSTEM */

.grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
  gap: calc(var(--spacing) * 8);
  margin-top: 2rem;
}
.grid-cols-1 {
  grid-template-columns: repeat(1, minmax(0, 1fr));
}
.grid-cols-2 {
  grid-template-columns: repeat(2, minmax(0, 1fr));
}
.grid-cols-3 {
  grid-template-columns: repeat(3, minmax(0, 1fr));
}
.grid-cols-4 {
  grid-template-columns: repeat(4, minmax(0, 1fr));
}

.row, .col {
  display: flex;
  flex-wrap: wrap;
  gap: calc(var(--spacing) * 8);
}
.row {
  flex-direction: row;
}
.col {
  flex-direction: column;
}
.flex-grow {
  flex-grow: 1;
}

@media (max-width: 768px) {
  .grid-cols-2, 
  .grid-cols-3, 
  .grid-cols-4 {
    grid-template-columns: repeat(1, minmax(0, 1fr));
  }
}

